Trans_Lab2/language.tac.output
Terminals unused in grammar

   LITERAL


Grammar

    0 $accept: start3ac $end

    1 start3ac: program

    2 program: stmt_list
    3        | /* empty */

    4 stmt_list: stmt
    5          | stmt_list stmt

    6 stmt: label ':'
    7     | IFFALSE factor go_to
    8     | IFTRUE factor go_to
    9     | go_to
   10     | assign
   11     | INPUT factor
   12     | OUTPUT factor

   13 assign: TMP_VAR ASSIGN expression
   14       | NAME ASSIGN expression
   15       | _struct_item ASSIGN expression
   16       | array_item ASSIGN expression

   17 expression: factor
   18           | factor CMP factor
   19           | factor '+' factor
   20           | factor '-' factor
   21           | factor '*' factor
   22           | factor '/' factor
   23           | factor OR factor
   24           | factor AND factor
   25           | factor XOR factor
   26           | '-' factor
   27           | NOT factor
   28           | array_item
   29           | _struct_item

   30 factor: TMP_VAR
   31       | NAME
   32       | INT_CONST
   33       | FLOAT_CONST

   34 label: LABEL
   35      | NAME

   36 go_to: GOTO label

   37 array_item: factor '[' factor ']'

   38 _struct_item: NAME '.' NAME


Terminals, with rules where they appear

$end (0) 0
'*' (42) 21
'+' (43) 19
'-' (45) 20 26
'.' (46) 38
'/' (47) 22
':' (58) 6
'[' (91) 37
']' (93) 37
error (256)
TMP_VAR (258) 13 30
LABEL (259) 34
NAME (260) 14 31 35 38
INT_CONST (261) 32
FLOAT_CONST (262) 33
LITERAL (263)
IFFALSE (264) 7
IFTRUE (265) 8
ASSIGN (266) 13 14 15 16
OR (267) 23
AND (268) 24
XOR (269) 25
NOT (270) 27
INPUT (271) 11
OUTPUT (272) 12
GOTO (273) 36
CMP (274) 18
_NOT (275)
_UMIN (276)


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
start3ac (31)
    on left: 1, on right: 0
program (32)
    on left: 2 3, on right: 1
stmt_list (33)
    on left: 4 5, on right: 2 5
stmt (34)
    on left: 6 7 8 9 10 11 12, on right: 4 5
assign (35)
    on left: 13 14 15 16, on right: 10
expression (36)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29, on right: 13 14
    15 16
factor (37)
    on left: 30 31 32 33, on right: 7 8 11 12 17 18 19 20 21 22 23
    24 25 26 27 37
label (38)
    on left: 34 35, on right: 6 36
go_to (39)
    on left: 36, on right: 7 8 9
array_item (40)
    on left: 37, on right: 16 28
_struct_item (41)
    on left: 38, on right: 15 29


state 0

    0 $accept: . start3ac $end

    TMP_VAR      shift, and go to state 1
    LABEL        shift, and go to state 2
    NAME         shift, and go to state 3
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    IFFALSE      shift, and go to state 6
    IFTRUE       shift, and go to state 7
    INPUT        shift, and go to state 8
    OUTPUT       shift, and go to state 9
    GOTO         shift, and go to state 10

    $default  reduce using rule 3 (program)

    start3ac      go to state 11
    program       go to state 12
    stmt_list     go to state 13
    stmt          go to state 14
    assign        go to state 15
    factor        go to state 16
    label         go to state 17
    go_to         go to state 18
    array_item    go to state 19
    _struct_item  go to state 20


state 1

   13 assign: TMP_VAR . ASSIGN expression
   30 factor: TMP_VAR .

    ASSIGN  shift, and go to state 21

    $default  reduce using rule 30 (factor)


state 2

   34 label: LABEL .

    $default  reduce using rule 34 (label)


state 3

   14 assign: NAME . ASSIGN expression
   31 factor: NAME .
   35 label: NAME .
   38 _struct_item: NAME . '.' NAME

    ASSIGN  shift, and go to state 22
    '.'     shift, and go to state 23

    ':'       reduce using rule 35 (label)
    $default  reduce using rule 31 (factor)


state 4

   32 factor: INT_CONST .

    $default  reduce using rule 32 (factor)


state 5

   33 factor: FLOAT_CONST .

    $default  reduce using rule 33 (factor)


state 6

    7 stmt: IFFALSE . factor go_to

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 26


state 7

    8 stmt: IFTRUE . factor go_to

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 27


state 8

   11 stmt: INPUT . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 28


state 9

   12 stmt: OUTPUT . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 29


state 10

   36 go_to: GOTO . label

    LABEL  shift, and go to state 2
    NAME   shift, and go to state 30

    label  go to state 31


state 11

    0 $accept: start3ac . $end

    $end  shift, and go to state 32


state 12

    1 start3ac: program .

    $default  reduce using rule 1 (start3ac)


state 13

    2 program: stmt_list .
    5 stmt_list: stmt_list . stmt

    TMP_VAR      shift, and go to state 1
    LABEL        shift, and go to state 2
    NAME         shift, and go to state 3
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    IFFALSE      shift, and go to state 6
    IFTRUE       shift, and go to state 7
    INPUT        shift, and go to state 8
    OUTPUT       shift, and go to state 9
    GOTO         shift, and go to state 10

    $default  reduce using rule 2 (program)

    stmt          go to state 33
    assign        go to state 15
    factor        go to state 16
    label         go to state 17
    go_to         go to state 18
    array_item    go to state 19
    _struct_item  go to state 20


state 14

    4 stmt_list: stmt .

    $default  reduce using rule 4 (stmt_list)


state 15

   10 stmt: assign .

    $default  reduce using rule 10 (stmt)


state 16

   37 array_item: factor . '[' factor ']'

    '['  shift, and go to state 34


state 17

    6 stmt: label . ':'

    ':'  shift, and go to state 35


state 18

    9 stmt: go_to .

    $default  reduce using rule 9 (stmt)


state 19

   16 assign: array_item . ASSIGN expression

    ASSIGN  shift, and go to state 36


state 20

   15 assign: _struct_item . ASSIGN expression

    ASSIGN  shift, and go to state 37


state 21

   13 assign: TMP_VAR ASSIGN . expression

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 38
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    NOT          shift, and go to state 39
    '-'          shift, and go to state 40

    expression    go to state 41
    factor        go to state 42
    array_item    go to state 43
    _struct_item  go to state 44


state 22

   14 assign: NAME ASSIGN . expression

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 38
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    NOT          shift, and go to state 39
    '-'          shift, and go to state 40

    expression    go to state 45
    factor        go to state 42
    array_item    go to state 43
    _struct_item  go to state 44


state 23

   38 _struct_item: NAME '.' . NAME

    NAME  shift, and go to state 46


state 24

   30 factor: TMP_VAR .

    $default  reduce using rule 30 (factor)


state 25

   31 factor: NAME .

    $default  reduce using rule 31 (factor)


state 26

    7 stmt: IFFALSE factor . go_to

    GOTO  shift, and go to state 10

    go_to  go to state 47


state 27

    8 stmt: IFTRUE factor . go_to

    GOTO  shift, and go to state 10

    go_to  go to state 48


state 28

   11 stmt: INPUT factor .

    $default  reduce using rule 11 (stmt)


state 29

   12 stmt: OUTPUT factor .

    $default  reduce using rule 12 (stmt)


state 30

   35 label: NAME .

    $default  reduce using rule 35 (label)


state 31

   36 go_to: GOTO label .

    $default  reduce using rule 36 (go_to)


state 32

    0 $accept: start3ac $end .

    $default  accept


state 33

    5 stmt_list: stmt_list stmt .

    $default  reduce using rule 5 (stmt_list)


state 34

   37 array_item: factor '[' . factor ']'

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 49


state 35

    6 stmt: label ':' .

    $default  reduce using rule 6 (stmt)


state 36

   16 assign: array_item ASSIGN . expression

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 38
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    NOT          shift, and go to state 39
    '-'          shift, and go to state 40

    expression    go to state 50
    factor        go to state 42
    array_item    go to state 43
    _struct_item  go to state 44


state 37

   15 assign: _struct_item ASSIGN . expression

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 38
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    NOT          shift, and go to state 39
    '-'          shift, and go to state 40

    expression    go to state 51
    factor        go to state 42
    array_item    go to state 43
    _struct_item  go to state 44


state 38

   31 factor: NAME .
   38 _struct_item: NAME . '.' NAME

    '.'  shift, and go to state 23

    $default  reduce using rule 31 (factor)


state 39

   27 expression: NOT . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 52


state 40

   26 expression: '-' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 53


state 41

   13 assign: TMP_VAR ASSIGN expression .

    $default  reduce using rule 13 (assign)


state 42

   17 expression: factor .
   18           | factor . CMP factor
   19           | factor . '+' factor
   20           | factor . '-' factor
   21           | factor . '*' factor
   22           | factor . '/' factor
   23           | factor . OR factor
   24           | factor . AND factor
   25           | factor . XOR factor
   37 array_item: factor . '[' factor ']'

    OR   shift, and go to state 54
    AND  shift, and go to state 55
    XOR  shift, and go to state 56
    CMP  shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '['  shift, and go to state 34

    $default  reduce using rule 17 (expression)


state 43

   28 expression: array_item .

    $default  reduce using rule 28 (expression)


state 44

   29 expression: _struct_item .

    $default  reduce using rule 29 (expression)


state 45

   14 assign: NAME ASSIGN expression .

    $default  reduce using rule 14 (assign)


state 46

   38 _struct_item: NAME '.' NAME .

    $default  reduce using rule 38 (_struct_item)


state 47

    7 stmt: IFFALSE factor go_to .

    $default  reduce using rule 7 (stmt)


state 48

    8 stmt: IFTRUE factor go_to .

    $default  reduce using rule 8 (stmt)


state 49

   37 array_item: factor '[' factor . ']'

    ']'  shift, and go to state 62


state 50

   16 assign: array_item ASSIGN expression .

    $default  reduce using rule 16 (assign)


state 51

   15 assign: _struct_item ASSIGN expression .

    $default  reduce using rule 15 (assign)


state 52

   27 expression: NOT factor .

    $default  reduce using rule 27 (expression)


state 53

   26 expression: '-' factor .

    $default  reduce using rule 26 (expression)


state 54

   23 expression: factor OR . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 63


state 55

   24 expression: factor AND . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 64


state 56

   25 expression: factor XOR . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 65


state 57

   18 expression: factor CMP . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 66


state 58

   19 expression: factor '+' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 67


state 59

   20 expression: factor '-' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 68


state 60

   21 expression: factor '*' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 69


state 61

   22 expression: factor '/' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 70


state 62

   37 array_item: factor '[' factor ']' .

    $default  reduce using rule 37 (array_item)


state 63

   23 expression: factor OR factor .

    $default  reduce using rule 23 (expression)


state 64

   24 expression: factor AND factor .

    $default  reduce using rule 24 (expression)


state 65

   25 expression: factor XOR factor .

    $default  reduce using rule 25 (expression)


state 66

   18 expression: factor CMP factor .

    $default  reduce using rule 18 (expression)


state 67

   19 expression: factor '+' factor .

    $default  reduce using rule 19 (expression)


state 68

   20 expression: factor '-' factor .

    $default  reduce using rule 20 (expression)


state 69

   21 expression: factor '*' factor .

    $default  reduce using rule 21 (expression)


state 70

   22 expression: factor '/' factor .

    $default  reduce using rule 22 (expression)
